--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,9 @@
 body {
+  background-color: #000000;
   margin: 0;
   padding: 0;
-  background-color: #000000;
+}
+
+.reveal-modal {
+  max-width: none !important;
 }
