--- a/style/style.css
+++ b/style/style.css
@@ -6,4 +6,41 @@ body {
 
 .reveal-modal {
   max-width: none !important;
+  width: 545px !important;
+  padding: 0px !important;
+}
+
+#ToolsMenuContainer {
+  border: 2px solid yellow;
+  display: table;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#ToolsMenu {
+  background-color: rgb(39, 0, 97);
+  color: white;
+}
+
+#ToolsMenu td {
+  padding: 10px;
+  text-align: center;
+  width: 180px;
+  height: 180px;
+}
+
+#ToolsMenu td #b { border: 2px solid rgb(39, 0, 97); }
+
+#ToolsMenu td #b:hover { border: 2px solid silver; }
+
+#ToolsMenu img {
+  height: 110px;
+  width: 115px;
+}
+
+#ToolsMenu #title {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 0px;
+  margin-top: 10px;
 }
