--- a/style/style.css
+++ b/style/style.css
@@ -5,9 +5,14 @@ body {
 }
 
 .reveal-modal {
+  left: 0;
+  margin: auto;
   max-width: none !important;
-  width: 545px !important;
+  min-height: 0px !important;
   padding: 0px !important;
+  right: 0;
+  top: 0;
+  width: 545px !important;
 }
 
 #ToolsModal {
@@ -16,6 +21,7 @@ body {
   font-size: 20px;
   font-weight: bold;
   text-align: center;
+  top: 100px;
 }
 
 #ToolsModal button {
