--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,19 @@
+#backgroundImageForm {
+  margin-top: 15px;
+}
+
 body {
   background-color: #000000;
   margin: 0;
   padding: 0;
+}
+
+#imageUploadControls {
+  width: 100%;
+}
+
+#imageUploadControls td {
+  text-align: center;
 }
 
 #optionsModal {
