restructured and formatted entire project
tabs

--- a/views/index.jade
+++ b/views/index.jade
@@ -16,22 +16,22 @@ html
 		script(type="text/javascript" src="javascript_min/vendor/modernizr.js")
 		script(type="text/javascript" src="javascript_min/foundation/foundation.js")
 		script(type="text/javascript" src="javascript_min/foundation/foundation.reveal.js")
-		script(type="text/javascript" src="javascript/main.js")
-		script(type="text/javascript" src="javascript/key.js")
-		script(type="text/javascript" src="javascript/setup.js")
-		script(type="text/javascript" src="javascript/util.js")
-		script(type="text/javascript" src="javascript/tools/Tool.js")
-		script(type="text/javascript" src="javascript/tools/Hammer.js")
-		script(type="text/javascript" src="javascript/tools/Chainsaw.js")
-		script(type="text/javascript" src="javascript/tools/Machinegun.js")
-		script(type="text/javascript" src="javascript/tools/Flamethrower.js")
-		script(type="text/javascript" src="javascript/tools/Colorthrower.js")
-		script(type="text/javascript" src="javascript/tools/Phaser.js")
-		script(type="text/javascript" src="javascript/tools/Stamper.js")
-		script(type="text/javascript" src="javascript/Animator.js")
-		script(type="text/javascript" src="javascript/Exploder.js")
-		script(type="text/javascript" src="javascript/tools/Termites.js")
-			
+		script(type="text/javascript" src="src/main.js")
+		script(type="text/javascript" src="src/key.js")
+		script(type="text/javascript" src="src/setup.js")
+		script(type="text/javascript" src="src/util.js")
+		script(type="text/javascript" src="src/tools/Tool.js")
+		script(type="text/javascript" src="src/tools/Hammer.js")
+		script(type="text/javascript" src="src/tools/Chainsaw.js")
+		script(type="text/javascript" src="src/tools/Machinegun.js")
+		script(type="text/javascript" src="src/tools/Flamethrower.js")
+		script(type="text/javascript" src="src/tools/Colorthrower.js")
+		script(type="text/javascript" src="src/tools/Phaser.js")
+		script(type="text/javascript" src="src/tools/Stamper.js")
+		script(type="text/javascript" src="src/Animator.js")
+		script(type="text/javascript" src="src/Exploder.js")
+		script(type="text/javascript" src="src/tools/Termites.js")
+
 		script(type="text/javascript").
 			$(document).ready(function() {
 				$('#uploadForm').submit(function() {
@@ -99,6 +99,6 @@ html
 					</table>
 				</div>
 			</div>
-		
+
 		script(type="text/javascript").
 			init();
