--- a/views/index.jade
+++ b/views/index.jade
@@ -6,13 +6,11 @@ html
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		link(rel='stylesheet', href='/stylesheets/foundation.min.css')
 		link(rel='stylesheet', href='/stylesheets/normalize.css')
-
 		script(src="http://code.jquery.com/jquery-2.1.4.js")
 		script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js")
-		script(src="http://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js")
+		script(src="http://malsup.github.com/min/jquery.form.min.js")
 		script(type="text/javascript" src="javascript_min/pixi.js")
 		script(type="text/javascript" src="javascript_min/howler.min.js")
-		script(type="text/javascript" src="javascript_min/jquery-1.11.3.min.js")
 		script(type="text/javascript" src="javascript_min/vendor/modernizr.js")
 		script(type="text/javascript" src="javascript_min/foundation/foundation.js")
 		script(type="text/javascript" src="javascript_min/foundation/foundation.reveal.js")
@@ -35,36 +33,29 @@ html
 		script(type="text/javascript").
 			$(document).ready(function() {
 				$('#uploadForm').submit(function() {
+					$('#optionsModal').foundation('reveal', 'close');
 					$(this).ajaxSubmit({
 						error: function(xhr) {
 							status('Error: ' + xhr.status);
 						},
 						success: function(response) {
-							console.log(response);
-							$("#myimage").attr("src","/file_upload?img="+response);
+							uploadBackground("/file_upload?img="+response)
 						}
 					});
-					//Very important line, it disable the page refresh.
+					// Very important line, it disable the page refresh.
 					return false;
 				});
 			});
+
+			function allowDrop(event) {
+				event.preventDefault();
+				$("#userPhoto").addClass("imageDrag");
+			}
 
 	body
 		script(type="text/javascript").
 			$(document).foundation();
 
-		//- h1= title
-		//- p Welcome to #{title} (This is index2.jade)
-
-		//- div.
-		//- 	<form id="uploadForm" enctype="multipart/form-data" action="/api/photo" method="post">
-		//- 		<input type="file" name="userPhoto" />
-		//- 		<input type="submit" value="Upload Image" name="submit">
-		//- 	</form>
-		//- 
-		//- div.
-		//- 	<img id="myimage" src="">
-		
 		div.
 			<div id="ToolsModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 				<div id="ToolsMenuContainer"><table id="ToolsMenu"></table></div>
@@ -74,29 +65,27 @@ html
 			<div id="optionsModal" class="reveal-modal" data-reveal aria-labelledby="secondModalTitle" aria-hidden="true" role="dialog">
 				<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 				<h2 id="firstModalTitle">Options</h2><hr/>
-				<h3 id="firstModalTitle">Choose a color</h3>
+				<h3 id="firstModalTitle">Rollover to preview, click to save</h3>
+				<h6>Choose a color</h6>
 				<div style="text-align: center;"><div id="colorChooser"></div></div>
 				<div id="backgroundImageForm">
 					<h3>Choose a background image</h3>
-					<table id="imageUploadControls">
+					<form id="uploadForm" enctype="multipart/form-data" action="/api/photo" method="post">
+						<table id="imageUploadControls">
 							<tr>
 								<td>
-									<label>Enter image URL<br/>
-										<input type="text" id="imgURLBox" style="width: 235px; padding: 5px;" placeholder="https://domain.com/image.jpeg" />
+									<label><span>Drag an Image into the box below!</span>
+										<input type="file" id="userPhoto" name="userPhoto" ondragover="allowDrop(event)"	/>
 									</label>
 								</td>
-								<td>
-									<label><span>Browse Computer</span><br/>
-										<input type="file" style="width: 220px; padding: 5px;" name="datafile" size="40">
-									</label>
-							</td>
-						</tr>
-						<tr>
-							<td colspan=100% style="padding-bottom: 5px; padding-top: 10px;">
-								<button type="button" id="uploadImage" style="font-weight: bold;">Use Image</button>
-							</td>
-						</tr>
-					</table>
+							</tr>
+							<tr>
+								<td colspan=100% style="padding-bottom: 5px; padding-top: 10px;">
+									<input type="submit" value="Upload Image" name="submit" style="font-weight: bold;">
+								</td>
+							</tr>
+						</table>
+					</form>
 				</div>
 			</div>
 
