--- a/views/index.jade
+++ b/views/index.jade
@@ -6,9 +6,8 @@ html
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		link(rel='stylesheet', href='/stylesheets/foundation.min.css')
 		link(rel='stylesheet', href='/stylesheets/normalize.css')
-		script(src="http://code.jquery.com/jquery-2.1.4.js")
-		script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js")
-		script(src="http://malsup.github.com/min/jquery.form.min.js")
+		script(type="text/javascript" src="javascript_min/jquery-2.1.4.js")
+		script(type="text/javascript" src="javascript_min/jquery.form.min.js")
 		script(type="text/javascript" src="javascript_min/pixi.js")
 		script(type="text/javascript" src="javascript_min/howler.min.js")
 		script(type="text/javascript" src="javascript_min/vendor/modernizr.js")
