fixed color selection title

--- a/views/index.jade
+++ b/views/index.jade
@@ -64,8 +64,8 @@ html
 			<div id="optionsModal" class="reveal-modal" data-reveal aria-labelledby="secondModalTitle" aria-hidden="true" role="dialog">
 				<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 				<h2 id="firstModalTitle">Options</h2><hr/>
-				<h3 id="firstModalTitle">Rollover to preview, click to save</h3>
-				<h6>Choose a color</h6>
+				<h3 id="firstModalTitle">Choose a color</h3>
+				<h6>Rollover to preview, click to save</h6>
 				<div style="text-align: center;"><div id="colorChooser"></div></div>
 				<div id="backgroundImageForm">
 					<h3>Choose a background image</h3>
