--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html
 	head
-		title= title
+		title= "Stress Relief"
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		link(rel='stylesheet', href='/stylesheets/foundation.min.css')
