--- a/views/index.jade
+++ b/views/index.jade
@@ -60,6 +60,7 @@ html
 				<div id="ToolsMenuContainer"><table id="ToolsMenu"></table></div>
 				<button type="submit" id="cleanScreen">Clean</button>
 				<p><a href="#" id="optionsModalButton" data-reveal-id="optionsModal" class="secondary button">Options</a></p>
+				<a id="saveImageButton">Save to image...</a>
 			</div>
 			<div id="optionsModal" class="reveal-modal" data-reveal aria-labelledby="secondModalTitle" aria-hidden="true" role="dialog">
 				<a class="close-reveal-modal" aria-label="Close">&#215;</a>
